# zhf-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  flake.nix
.github/workflows/: generate-data.yml  retry-generate.yml
crates/types/: Cargo.toml
crates/types/src/: lib.rs
generator/: Cargo.toml
generator/src/: feed.rs  hydra.rs  main.rs  maintainers.rs
src/: cli.rs  fetcher.rs  main.rs  scraper.rs  table.rs
