[package]
name = "zhf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zhf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
tabled = { version = "0.16", features = ["ansi"] }
csv = "1"
anyhow = "1"
