[workspace]
members = [".", "crates/types", "generator"]
resolver = "2"

[package]
name = "zhf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zhf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tabled = { version = "0.16", features = ["ansi"] }
csv = "1"
anyhow = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zhf-types = { path = "crates/types" }
pager = "0.16"
