[package]
name = "zhf-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zhf-generator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
html-escape = "0.2"
zhf-types = { path = "../crates/types" }
