[package]
name = "zhf-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zhf-generator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
scraper = "0.22"
futures = "0.3"
atom_syndication = "0.12"
brotli = "6"
zhf-types = { path = "../crates/types" }
